--- a/src/bulmaMystyles.scss
+++ b/src/bulmaMystyles.scss
@@ -24,7 +24,7 @@ $family-sans-serif: "Space Mono", sans-serif;
 
 // // Update some of Bulma's component variables
 
-// Navbar
+// Navbar css
 $body-background-color: $main-dark;
 $navbar-background-color: $main-dark;
 $navbar-box-shadow-color: $grey-dark;
