--- a/src/mystyles.scss
+++ b/src/mystyles.scss
@@ -35,9 +35,12 @@ $action-button-size: 2.5em;
 $button-padding-size: 0.3em;
 
 
+html, body {
+	height: 100%;
+	margin:0;
+}
 
 body {
-  margin: 0;
   background-color: $color-bg;
   color: $color-fg;
   font-family: 'Space Mono', 'Segoe UI', 'Ubuntu', 'Source Sans Pro', 'monospace';
@@ -45,21 +48,17 @@ body {
 }
 
 #app {
-  min-height: 100vh;
+	height: 100%;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
 }
 
-main {
-  margin-top: $vertical-margin;
-  margin-bottom: $vertical-margin;
-  height: $content-height-size;
-
-
-  //max-height: $content-height-size;
-
-  // doesn't work for all sizes screen
-  // height: calc(100vh - 11.5rem);
-
-
+.main-container {
+	position: absolute;
+	width: 100%;
+	top: 115px;
+	min-height: -webkit-fill-available;
 }
 
 // persistent-header style
@@ -71,11 +70,15 @@ main {
   background-color: $color-bg;
   display: flex;
   flex-direction: column;
-  gap: 1em;
+  gap: 0em;
   z-index: 2;
 }
 
 // input style
+input:autofill {
+    background: #fff; /* or any other */
+}
+
 input.styled-input, div.styles-input {
   padding: $vertical-padding $horizontal-padding;
   font: inherit;
@@ -85,6 +88,15 @@ input.styled-input, div.styles-input {
   outline: none;
   border-radius: 0.5em;
   transition: all 250ms ease;
+
+
+}
+
+div.styles-input {
+	padding: 0px;
+	display: flex;
+	/* flex-direction: row; */
+	justify-content: space-between;
 }
 
 input.styled-input-icon-right {
@@ -96,6 +108,13 @@ input.styled-input-icon-right {
 	background-color: transparent; 
 	border-radius: 0em; 
 	border: none; 
+}
+
+.input-icon {
+	display: flex;
+    /* justify-content: initial; */
+    align-items: center;
+    padding-right: 1rem;
 }
 
 input.styled-input:hover,
@@ -114,19 +133,20 @@ div.styles-input:focus-within {
 .container {
   padding-left: 2em;
   padding-right: 2em;
-  max-width: 900px;
+  max-width: 740px;
   margin-left: auto;
   margin-right: auto;
-  height: 100%;
+//   height: 100%;
+//   display: grid;
 }
 
 header.appbar-root {
   border-bottom: 2px solid $tab-item-list-black;
   background-color: $color-bg;
-  position: sticky;
+  position: absolute;
+  width: 100%;
   top: 0;
   z-index: 1200;
-  height:  5.5rem; // 11vh;
 }
 
 .appbar-container {
@@ -311,7 +331,7 @@ header.appbar-root {
   list-style-type: none;
   width: 100%;
 }
-  
+
 .tab-item-main {
   position: relative;
   display: flex;
@@ -330,17 +350,17 @@ header.appbar-root {
   overflow: hidden;
   transition: all 250ms ease;
 }
-  
+
 .tab-item-main:hover {
   background-color: $tab-item-main-bg;
 }
-  
+
 .tab-item-main:focus-visible {
-  border: 2px solid $placeholder-color;
+//   border: 2px solid $placeholder-color;
   background-color: $tab-item-main-bg;
   font-weight: bold;
 }
-  
+
 .tab-item-main::before {
   content: '';
   position: absolute;
@@ -355,7 +375,7 @@ header.appbar-root {
   transform: translateY(0.3em);
   transition: all 250ms ease;
 }
-  
+
 .tab-item-root[data-active=true] .tab-item-main::before {
   transform: translateY(0);
 }
@@ -503,12 +523,14 @@ input[type=checkbox]:active {
 
 // Footer
 .footer {
-    position: fixed;
-    bottom: 10px;
-    left: 50vw;
+	position: absolute;
+	text-align: center;
+	display: flex;
+	justify-content: center;
+	bottom: 5px;
+	width: 100%;
 }
 
-// test
 
 .github {
 	font-size: 2rem;
@@ -517,21 +539,25 @@ input[type=checkbox]:active {
 
 // Delete-tasks-button
 .delete-tasks-button {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: transparent;
-  border: none;
-  color:rgba(255, 255, 255, 1);
-  // color: #32DE8A;
-  // color: #136F63;
-  // color: #F03A47;
-  border:1px solid rgba(255, 255, 255, 1);
-  outline: none;
-  border-radius: 0.3em;
-  cursor: pointer;
-  font-size: 1em;
+
+
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	background-color: transparent;
+	border: none;
+	color:rgba(255, 255, 255, 1);
+	// color: #32DE8A;
+	// color: #136F63;
+	// color: #F03A47;
+	border:1px solid rgba(255, 255, 255, 1);
+	outline: none;
+	border-radius: 0.3em;
+	cursor: pointer;
+	font-size: 1em;
+
 }
+
 .delete-tasks-button:hover {
   // color: #32DE8A;
   // color: #136F63;
@@ -541,155 +567,6 @@ input[type=checkbox]:active {
   outline: none;
   border-radius: 0.3em;
 }
-
-
-
-/// PAGER
-$rc-pagination-arrow-font-size: 22px;
-$rc-pagination-right-text-font-size: 14px;
-$rc-pagination-input-height: 20px;
-
-//KEEP IT 
-.rc-pagination {
-  margin: 0;
-  padding: 0;
-  font-size: $rc-pagination-right-text-font-size;    // FONT SIZE of / page number item 
-  display: flex;
-  align-items: center;
-}
-.rc-pagination ul,
-.rc-pagination ol {
-  margin: 0;
-  padding: 0;
-  list-style: none;
-}
-.rc-pagination::after {
-  display: block;
-  clear: both;
-  height: 0;
-  overflow: hidden;
-  visibility: hidden;
-  content: ' ';
-}
-
-// prev and next button
-.rc-pagination-prev {
-  margin-right: 8px;
-}
-.rc-pagination-prev,
-.rc-pagination-next{
-  display: inline-block;
-  min-width: 28px;
-  height: 28px;
-  text-align: center;
-  vertical-align: middle;
-  list-style: none;
-  border-radius: 2px;
-}
-
-.rc-pagination-prev:hover,
-.rc-pagination-next:hover {
-  border-color: $color-accent;
-  box-shadow: 0 0 .4em $box-shadow-focus-blue;
-}
-
-.rc-pagination-simple .rc-pagination-prev .rc-pagination-item-link,
-.rc-pagination-simple .rc-pagination-next .rc-pagination-item-link {
-  background-color: transparent;
-  border: 0;
-  color: $color-fg;
-}
-
-.rc-pagination-simple .rc-pagination-prev .rc-pagination-item-link:hover,
-.rc-pagination-simple .rc-pagination-next .rc-pagination-item-link:hover {
-  color: $color-accent;
-}
-
-.rc-pagination-simple .rc-pagination-prev .rc-pagination-item-link::after,
-.rc-pagination-simple .rc-pagination-next .rc-pagination-item-link::after {
-  height: $rc-pagination-input-height;
-  line-height: $rc-pagination-input-height;
-}
-
-.rc-pagination-simple .rc-pagination-prev,
-.rc-pagination-simple .rc-pagination-next {
-  vertical-align: top;
-  font: inherit;
-  color: $color-fg;
-  border: 2px solid $border-color-black;
-  outline: none;
-  border-radius: 0.5em;
-  transition: all 250ms ease;
-}
-.rc-pagination-simple .rc-pagination-prev:hover,
-.rc-pagination-simple .rc-pagination-next:hover {
-  border: 2px solid $color-accent;
-}
-
-.rc-pagination-prev button,
-.rc-pagination-next button {
-  user-select: none;
-}
-
-.rc-pagination-prev .rc-pagination-item-link,
-.rc-pagination-next .rc-pagination-item-link {
-  display: block;
-  width: 100%;
-  height: 100%;
-  font-size: $rc-pagination-arrow-font-size;
-  text-align: center;
-  border-radius: 2px;
-  outline: none;
-  transition: all 0.3s;
-}
-
-.rc-pagination-prev button:after {
-  content: '‹';
-  display: block;
-}
-.rc-pagination-next button:after {
-  content: '›';
-  display: block;
-}
-.rc-pagination-disabled,
-.rc-pagination-disabled:hover,
-.rc-pagination-disabled:focus {
-  cursor: not-allowed;
-}
-.rc-pagination-disabled .rc-pagination-item-link,
-.rc-pagination-disabled:hover .rc-pagination-item-link,
-.rc-pagination-disabled:focus .rc-pagination-item-link {
-  cursor: not-allowed;
-}
-.rc-pagination-slash {
-  margin: 0 10px 0 5px;
-}
-
-.rc-pagination-simple .rc-pagination-simple-pager {
-  display: inline-block;
-  height: $rc-pagination-input-height;
-  margin-right: 8px;
-}
-
-// pager input box
-.rc-pagination-simple .rc-pagination-simple-pager input {
-  box-sizing: border-box;
-  margin-right: 0px;
-  text-align: center;
-  background-color: transparent;
-  border: 2px solid $border-color-black;
-  color: $color-fg;
-  border-radius: 2px;
-  outline: none;
-  transition: border-color 0.3s;
-  width: 2rem;
-}
-.rc-pagination-simple .rc-pagination-simple-pager input:hover {
-  border-color: $color-accent;
-}
-
-// = END PAGER
-
 
 
 //<button className="stackoverflow-button" role="button">Button 7</button>
@@ -704,9 +581,6 @@ $rc-pagination-input-height: 20px;
   color: $color-fg;
   cursor: pointer;
   display: inline-block;
-  // font-family: -apple-system,system-ui,"Segoe UI","Liberation Sans",sans-serif;
-  // font-size: 13px;
-  // font-weight: 400;
   font-size: 1rem;
   line-height: 1.15385;
   margin: 0;
@@ -741,15 +615,13 @@ $rc-pagination-input-height: 20px;
   flex-direction: row;
 }
 
-.landing-sign-in-up-container {
-  margin: 0vh 8vw;
-  height: 100%;
-  display: grid;
-  align-content: center;
-}
+// .landing-sign-in-up-container {
+// 	margin: 0vh 8vw;
+// }
 
 .sign-in-up-input-container {
-	display: grid;
+	display: flex;
+	flex-direction: column;
 }
 
 .sign-in-up-label-input {
@@ -764,6 +636,173 @@ $rc-pagination-input-height: 20px;
 .input-error {
 	color: $color-error;
 }
+
 .fa-check {
 	color: $edit-todo-green;
 }
+
+
+
+// media quieries
+@media (max-width: 640px) /*, screen and (orientation: portrait) */{ 
+	.container {
+		padding-left: 1em;
+		padding-right: 1em;
+		display: block;
+	}
+
+	.appbar-container {
+		display: flex;
+	}
+ }
+
+
+
+
+
+
+// /// PAGER
+// $rc-pagination-arrow-font-size: 22px;
+// $rc-pagination-right-text-font-size: 14px;
+// $rc-pagination-input-height: 20px;
+
+// //KEEP IT 
+// .rc-pagination {
+//   margin: 0;
+//   padding: 0;
+//   font-size: $rc-pagination-right-text-font-size;    // FONT SIZE of / page number item 
+//   display: flex;
+//   align-items: center;
+// }
+// .rc-pagination ul,
+// .rc-pagination ol {
+//   margin: 0;
+//   padding: 0;
+//   list-style: none;
+// }
+// .rc-pagination::after {
+//   display: block;
+//   clear: both;
+//   height: 0;
+//   overflow: hidden;
+//   visibility: hidden;
+//   content: ' ';
+// }
+
+// // prev and next button
+// .rc-pagination-prev {
+//   margin-right: 8px;
+// }
+// .rc-pagination-prev,
+// .rc-pagination-next{
+//   display: inline-block;
+//   min-width: 28px;
+//   height: 28px;
+//   text-align: center;
+//   vertical-align: middle;
+//   list-style: none;
+//   border-radius: 2px;
+// }
+
+// .rc-pagination-prev:hover,
+// .rc-pagination-next:hover {
+//   border-color: $color-accent;
+//   box-shadow: 0 0 .4em $box-shadow-focus-blue;
+// }
+
+// .rc-pagination-simple .rc-pagination-prev .rc-pagination-item-link,
+// .rc-pagination-simple .rc-pagination-next .rc-pagination-item-link {
+//   background-color: transparent;
+//   border: 0;
+//   color: $color-fg;
+// }
+
+// .rc-pagination-simple .rc-pagination-prev .rc-pagination-item-link:hover,
+// .rc-pagination-simple .rc-pagination-next .rc-pagination-item-link:hover {
+//   color: $color-accent;
+// }
+
+// .rc-pagination-simple .rc-pagination-prev .rc-pagination-item-link::after,
+// .rc-pagination-simple .rc-pagination-next .rc-pagination-item-link::after {
+//   height: $rc-pagination-input-height;
+//   line-height: $rc-pagination-input-height;
+// }
+
+// .rc-pagination-simple .rc-pagination-prev,
+// .rc-pagination-simple .rc-pagination-next {
+//   vertical-align: top;
+//   font: inherit;
+//   color: $color-fg;
+//   border: 2px solid $border-color-black;
+//   outline: none;
+//   border-radius: 0.5em;
+//   transition: all 250ms ease;
+// }
+// .rc-pagination-simple .rc-pagination-prev:hover,
+// .rc-pagination-simple .rc-pagination-next:hover {
+//   border: 2px solid $color-accent;
+// }
+
+// .rc-pagination-prev button,
+// .rc-pagination-next button {
+//   user-select: none;
+// }
+
+// .rc-pagination-prev .rc-pagination-item-link,
+// .rc-pagination-next .rc-pagination-item-link {
+//   display: block;
+//   width: 100%;
+//   height: 100%;
+//   font-size: $rc-pagination-arrow-font-size;
+//   text-align: center;
+//   border-radius: 2px;
+//   outline: none;
+//   transition: all 0.3s;
+// }
+
+// .rc-pagination-prev button:after {
+//   content: '‹';
+//   display: block;
+// }
+// .rc-pagination-next button:after {
+//   content: '›';
+//   display: block;
+// }
+// .rc-pagination-disabled,
+// .rc-pagination-disabled:hover,
+// .rc-pagination-disabled:focus {
+//   cursor: not-allowed;
+// }
+// .rc-pagination-disabled .rc-pagination-item-link,
+// .rc-pagination-disabled:hover .rc-pagination-item-link,
+// .rc-pagination-disabled:focus .rc-pagination-item-link {
+//   cursor: not-allowed;
+// }
+// .rc-pagination-slash {
+//   margin: 0 10px 0 5px;
+// }
+
+// .rc-pagination-simple .rc-pagination-simple-pager {
+//   display: inline-block;
+//   height: $rc-pagination-input-height;
+//   margin-right: 8px;
+// }
+
+// // pager input box
+// .rc-pagination-simple .rc-pagination-simple-pager input {
+//   box-sizing: border-box;
+//   margin-right: 0px;
+//   text-align: center;
+//   background-color: transparent;
+//   border: 2px solid $border-color-black;
+//   color: $color-fg;
+//   border-radius: 2px;
+//   outline: none;
+//   transition: border-color 0.3s;
+//   width: 2rem;
+// }
+// .rc-pagination-simple .rc-pagination-simple-pager input:hover {
+//   border-color: $color-accent;
+// }
+
+// // = END PAGER
