--- a/src/mystyles.scss
+++ b/src/mystyles.scss
@@ -58,22 +58,25 @@ body {
 	height: 100%;
 	display: flex;
 	flex-direction: column;
-	justify-content: center;
+	position: relative;
+	// justify-content: center;
 }
 
 .main-container {
-	position: absolute;
-	width: 100%;
-	top: 115px;
-	min-height: -webkit-fill-available;
+	position: relative;
+	margin-top: 1rem;
+	height: 100%;
+	// width: 100%;
+	// top: 115px;
+	// min-height: -webkit-fill-available;
 }
 
 // persistent-header style
 .persistent-header {
-  position: -webkit-sticky;
-  position: sticky;
+  // position: -webkit-sticky;
+  // position: sticky;
   // top: 0;
-  top: 115px; // same as .main-container
+  // top: 115px; // same as .main-container
   left: 0;
   background-color: $color-bg;
   display: flex;
@@ -144,14 +147,19 @@ div.styles-input:focus-within {
   max-width: 666px;
   margin-left: auto;
   margin-right: auto;
-//   height: 100%;
+  height: 100%;
 //   display: grid;
+}
+
+.sign-in-up {
+	display: flex;
+	align-items: center;
 }
 
 header.appbar-root {
   border-bottom: 2px solid $tab-item-list-black;
   background-color: $color-bg;
-  position: fixed;
+  position: relative;
   width: 100%;
   top: 0;
   z-index: 1200;
@@ -627,9 +635,9 @@ input[type=checkbox]:active {
   flex-direction: row;
 }
 
-// .landing-sign-in-up-container {
-// 	margin: 0vh 8vw;
-// }
+.landing-sign-in-up-container {
+	width: 100%;
+}
 
 .sign-in-up-input-container {
 	display: flex;
@@ -659,7 +667,7 @@ input[type=checkbox]:active {
 	.container {
 		padding-left: 1em;
 		padding-right: 1em;
-		display: block;
+		// display: block;
 	}
 
 	.appbar-container {
