--- a/src/mystyles.scss
+++ b/src/mystyles.scss
@@ -66,7 +66,7 @@ body {
 	position: relative;
 	margin-top: 1rem;
 	height: 100%;
-	margin-bottom: 1rem;
+	margin-bottom: .5rem;
 	// width: 100%;
 	// top: 115px;
 	// min-height: -webkit-fill-available;
